error_log to stderr
Now all error logs are thrown to stderr (and to parent supervisord). Having this it's easy to access them from outside of the container. Also, it doesn't use the space inside container for logs, there's no need for any log management etc.

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,5 +1,5 @@
 [program:nginx]
 command = /usr/sbin/nginx
 autorestart = true
-stdout_logfile = /data/logs/nginx-error.log
-stderr_logfile = /data/logs/nginx-error.log
+stderr_logfile = NONE
+stdout_logfile = NONE
