--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,7 +1,7 @@
 daemon off;
 
 pid /var/run/nginx.pid;
-error_log /data/logs/nginx-error.log;
+error_log stderr warn;
 
 user www;
 worker_processes auto;
@@ -13,6 +13,10 @@ events {
 }
 
 http {
+  # Somehow it's not inherited by vhosts (server{} context) when using with 'stderr' value.
+  # Therefore it's re-defined here to avoid specyfing it for each vhost.
+  error_log stderr warn;
+  
   include /etc/nginx/nginx.d/*.conf;
   include /data/conf/nginx/nginx.d/*.conf;
 
