nginx error log level changed to notice
There's no particular reason for that change, it's more cosmetic to have more verbose logging. If that's too much, we can lower it later.

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,7 +1,7 @@
 daemon off;
 
 pid /var/run/nginx.pid;
-error_log stderr warn;
+error_log stderr notice;
 
 user www;
 worker_processes auto;
@@ -15,7 +15,7 @@ events {
 http {
   # Somehow it's not inherited by vhosts (server{} context) when using with 'stderr' value.
   # Therefore it's re-defined here to avoid specyfing it for each vhost.
-  error_log stderr warn;
+  error_log stderr notice;
   
   include /etc/nginx/nginx.d/*.conf;
   include /data/conf/nginx/nginx.d/*.conf;
