--- a/container-files/etc/nginx/nginx.conf
+++ b/container-files/etc/nginx/nginx.conf
@@ -1,15 +1,15 @@
 daemon off;
-
 pid /var/run/nginx.pid;
-error_log stderr notice;
 
 user www;
-worker_processes auto;
+error_log stderr notice;
 
+worker_processes auto;
+worker_rlimit_nofile 100000;
 events {
   multi_accept on;
   use epoll;
-  worker_connections 1024;
+  worker_connections 4096;
 }
 
 http {
