--- a/container-files/etc/nginx/nginx.d/90-misc.conf
+++ b/container-files/etc/nginx/nginx.d/90-misc.conf
@@ -1,4 +1,4 @@
-server_tokens on;
+server_tokens off;
 
 sendfile on;
 client_max_body_size 256M;
@@ -10,4 +10,4 @@ types_hash_bucket_size 64;
 tcp_nopush on;
 tcp_nodelay on;
 
-keepalive_timeout  5;
+keepalive_timeout  15;
