--- a/container-files/config/init/vhost-proxy.conf
+++ b/container-files/config/init/vhost-proxy.conf
@@ -1,7 +1,10 @@
 server {
   listen %proxy_port%;
   location / {
-    proxy_set_header Host $host:$server_port;
+    proxy_set_header Host $host;
+    proxy_set_header X-Forwarded-Port $server_port;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_redirect off;
     proxy_pass http://127.0.0.1:80;
   }
 }
