default vhost: listen syntax updated to the current one

--- a/container-files/etc/nginx/hosts.d/default.conf
+++ b/container-files/etc/nginx/hosts.d/default.conf
@@ -1,5 +1,5 @@
 server {
-  listen      80 default;
+  listen      80 default_server;
   root        /data/www/default;
   index       index.html;
   
