--- a/container-files/config/init/vhost-proxy-https.conf
+++ b/container-files/config/init/vhost-proxy-https.conf
@@ -1,11 +1,11 @@
-# Internal proxy, HTTP version
+# Internal proxy, HTTPS version
 server {
-  listen %proxy_port%;
+  listen %proxy_port% ssl;
   location / {
     proxy_set_header Host $host;
     proxy_set_header X-Forwarded-Port $server_port;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_redirect off;
-    proxy_pass http://127.0.0.1:80;
+    proxy_pass https://127.0.0.1:443;
   }
 }
