--- a/circle.yml
+++ b/circle.yml
@@ -3,18 +3,11 @@ machine:
     - docker
 
 dependencies:
-  pre:
-    - docker info && docker version
-    
   override:
-    - docker pull million12/centos-supervisor:latest
+    - docker build -t million12/nginx .
 
 # Run tests
 test:
-  pre:
-    # Build million12/nginx image
-    - docker build -t million12/nginx .
-
   override:
     - docker run -d -p 8080:80 --name nginx million12/nginx
     - while true; do if docker logs nginx | grep "nginx entered RUNNING state"; then break; else sleep 1; fi done
@@ -47,8 +40,22 @@ test:
     #
     # Test internal proxy
     #
-    - docker run -d -p 8282:80 -p 3000:3000 --env="SET_INTERNAL_PROXY_ON_PORT=3000" million12/nginx && sleep 5
+    - docker run -d --name nginx-proxy -p 8282:80 -p 3000:3000 --env="SET_INTERNAL_PROXY_ON_PORT=3000" million12/nginx && sleep 5
     - curl -s --show-error -o out.log http://localhost:8282 > out.log 2>&1
     - curl -s --show-error -o out-proxy.log http://localhost:3000 > out-proxy.log 2>&1
     - grep 'default vhost' out.log
     - grep 'default vhost' out-proxy.log
+    - docker rm -f nginx-proxy || true
+
+    #
+    # Test /nginx_status page
+    #
+    - docker run -d --name nginx-status -p 8383:80 million12/nginx && sleep 5
+    - curl -sSLi http://localhost:8383/nginx_status/ | grep "HTTP/1.1 403 Forbidden"
+    - docker rm -f nginx-status || true
+    
+    - docker run -d --name nginx-status -p 8383:80 --env="STATUS_PAGE_ALLOWED_IP=$(ip -4 addr show docker0 | grep inet | cut -d/ -f1 | awk '{print $2}')" million12/nginx && sleep 5
+    - curl -sSLi http://localhost:8383/nginx_status/
+    - curl -sSLi http://localhost:8383/nginx_status/ | grep "HTTP/1.1 200 OK"
+    - curl -sSLi http://localhost:8383/nginx_status/ | grep "Active connections"
+    - docker rm -f nginx-status || true
