--- a/container-files/etc/nginx/hosts.d/default.conf
+++ b/container-files/etc/nginx/hosts.d/default.conf
@@ -3,6 +3,8 @@ server {
   root        /data/www/default;
   index       index.html;
   
+  include     /etc/nginx/conf.d/stub-status.conf;
+  
   include     /etc/nginx/conf.d/default-*.conf;
   include     /data/conf/nginx/conf.d/default-*.conf;
 }
