--- a/container-files/config/init/vhost-proxy-https.conf
+++ b/container-files/config/init/vhost-proxy-https.conf
@@ -1,6 +1,9 @@
 # Internal proxy, HTTPS version
 server {
   listen %proxy_port% ssl;
+  ssl_certificate       /etc/nginx/ssl/dummy.crt;
+  ssl_certificate_key   /etc/nginx/ssl/dummy.key;
+
   location / {
     proxy_set_header Host $host;
     proxy_set_header X-Forwarded-Port $server_port;
