[TASK] Nginx temp paths set to /data/tmp/nginx/...

--- a/container-files/etc/nginx/nginx.d/80-buffers.conf
+++ b/container-files/etc/nginx/nginx.d/80-buffers.conf
@@ -5,3 +5,6 @@ client_body_buffer_size 5M;
 
 # Set max upload size
 client_max_body_size 256M;
+
+# Set directory for storing the temporary files with the body of the request
+client_body_temp_path /data/tmp/nginx/client_temp 1 2;
