--- a/container-files/etc/nginx/nginx.d/80-proxy-buffers.conf
+++ b/container-files/etc/nginx/nginx.d/80-proxy-buffers.conf
@@ -1,5 +1,6 @@
-# Increase slightly proxy buffer size and amount so it can 
+# Increase slightly proxy buffer size and amount so it can
 # handle up to 512KB into the memory (vs. default 32|64kB).
 # Only used when proxy_pass directive is in place.
 proxy_buffer_size 32k;
 proxy_buffers 16 32k;
+proxy_temp_path /data/tmp/nginx/proxy_temp 1 2;
