--- a/container-files/etc/nginx/addon.d/http_realip.conf
+++ b/container-files/etc/nginx/addon.d/http_realip.conf
@@ -1,3 +1,3 @@
-set_real_ip_from 127.0.0.1;
-real_ip_header X-Forwarded-For;
+set_real_ip_from 172.17.0.0/16; ## Docker network - adjust if needed.
+real_ip_header   proxy_protocol;
 real_ip_recursive off;
