--- a/container-files/config/init/vhost-default.conf
+++ b/container-files/config/init/vhost-default.conf
@@ -1,13 +1,13 @@
 server {
-  listen      80 default_server;
-  listen      81 default_server spdy;
-  listen      443 default_server ssl spdy;
-
-  root        /data/www/default;
-  index       index.html;
+  listen      80  default_server;
+  listen      81  default_server http2 proxy_protocol; ## Needed when behind HAProxy with SSL termination + HTTP/2 support
+  listen      443 default_server ssl http2;
 
   ssl_certificate       /etc/nginx/ssl/dummy.crt;
   ssl_certificate_key   /etc/nginx/ssl/dummy.key;
+
+  root        /data/www/default;
+  index       index.html;
 
   include     /etc/nginx/conf.d/stub-status.conf;
 
