Add `expires max` to .woff2 files
With previous setup only .woff files got cached in the browser. With
this change also the next generation fonts, .woff2 are cached.

--- a/container-files/etc/nginx/conf.d/default-10-expires.conf
+++ b/container-files/etc/nginx/conf.d/default-10-expires.conf
@@ -3,6 +3,6 @@
 # - flash
 # - fonts
 # - css/js
-location ~* \.(?:jpe?g|gif|png|ico|swf|svg|eot|ttf|otf|woff|htc|css|js)$ {
+location ~* \.(?:jpe?g|gif|png|ico|swf|svg|eot|ttf|otf|woff2?|htc|css|js)$ {
   expires max;
 }
